2008-09-18  Bastien Nocera  <hadess@hadess.net>

	* COPYING.LIB: Remove obsolete file, spotted by
	Christian Persch

2008-09-18  Bastien Nocera  <hadess@hadess.net>

	* src/totem.c (totem_action_remote): Fix missing break
	statement, spotted by Robin Stocker <robin@nibor.org>

2008-09-11  Andrés G. Aragoneses  <aaragoneses@novell.com>

	* configure.in: Add a check for gst-inspect.
	(Closes: #551774)

2008-09-10  Bastien Nocera  <hadess@hadess.net>

	* data/totem.schemas.in: Add schemas for the visuals
	quality and connection speed settings, patch from
	Eric Piel <e.a.b.piel@tudelft.nl> (Closes: #535505)
	* src/backend/bacon-video-widget.h: Force the first item
	of the visuals quality enum to be 0

2008-09-09  Bastien Nocera  <hadess@hadess.net>

	* data/mime-type-list.txt:
	* src/totem-menu.c (totem_action_add_recent):
	* src/totem-menu.h: Fix recent-menu not adding anything
	because it couldn't get a fast mime-type for the file,
	(Closes: #551360), also fix addition of streams to the
	list, otherwise nothing to go in the "Open Location"
	dialogue

2008-09-09  Bastien Nocera  <hadess@hadess.net>

	* src/backend/bacon-video-widget-gst-0.10.c
	(bacon_video_widget_get_mrls): Also allow the Fluendo MPEG
	demuxers recently moved to GStreamer main

2008-09-08  Bastien Nocera  <hadess@hadess.net>

	* src/plugins/totem-plugins-engine.c
	(totem_plugins_engine_activate_plugin): Don't ever disable
	an invisible plugin

2008-09-04  Bastien Nocera  <hadess@hadess.net>

	* src/Makefile.am: remove obsolete variable

2008-09-02  Philip Withnall  <philip@tecnocode.co.uk>

	* data/totem.schemas.in:
	* src/backend/bacon-video-widget-xine.c: (xine_event_message),
	(bacon_video_widget_open_with_subtitle):
	* src/plugins/publish/publish-plugin.ui:
	* src/plugins/pythonconsole/pythonconsole.py:
	* src/plugins/pythonconsole/pythonconsole.totem-plugin.in:
	* src/plugins/skipto/totem-skipto-plugin.c: (impl_activate): Convert