@@ -11,7 +11,7 @@
 	  <short>Allow the screensaver to activate even when audio-only is playing</short>
 	  <long>
 	    Allow the screensaver to activate even when audio-only is playing.
-	    This is useful for monitor powered speakers.
+	    This is useful for monitor-powered speakers.
 	  </long>
 	</locale>
       </schema>
